@@ -20,3 +20,26 @@
 SPARK_HOME=${SPARK_HOME:-/opt/spark}
 # Home directory of flink distribution.
 FLINK_HOME=${FLINK_HOME:-/opt/flink}
+
+# Initialize JAVA_OPTS to avoid unbound variable error.
+JAVA_OPTS=${JAVA_OPTS:-}
+
+# Function to check if the current Java version is 17 or higher.
+is_java_17_or_newer() {
+    java_version_output=$(java -version 2>&1)
+    if [[ $java_version_output == *"version \""* ]]; then
+        java_version=$(echo $java_version_output | awk -F '"' '/version/ {print $2}')
+        java_major_version=$(echo $java_version | cut -d'.' -f1)
+        if [[ "$java_major_version" -ge 17 ]]; then
+            return 0
+        fi
+    fi
+    return 1
+}
+
+# Set JAVA_OPTS if Java version is 17 or newer.
+if is_java_17_or_newer; then
+    JAVA_OPTS="$JAVA_OPTS --add-exports=java.base/sun.net.util=ALL-UNNAMED --add-exports=java.rmi/sun.rmi.registry=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED"
+fi
+
+export JAVA_OPTS
